# OpenCLProjects

./: README.md
bitonic-sort/: BitonicSort.cpp  CMakeLists.txt  README.md  test-sort.cpp
bitonic-sort/include/: Data.h  kernels.clh
image-blurring/: CMakeLists.txt  ImageBlurring.cpp  README.md
image-blurring/.build/: CMakeCache.txt
image-blurring/include/: Data.h  common.h  kernels.clh
k-means/: CMakeLists.txt  KMeans.cpp  README.md
k-means/include/: Data.h  kernels.clh
matrix-multiplication/: CMakeLists.txt  MatrixMul.cpp  README.md
matrix-multiplication/include/: Data.h  common.h  kernels.clh
neural-networks/feed-forward/: README.md
neural-networks/feed-forward/forward-pass/: CMakeLists.txt  README.md  forwardPass.cpp
neural-networks/feed-forward/forward-pass/include/: Data.h  kernels.clh
prefix-scan/: CMakeLists.txt  PrefixScan.cpp  README.md
prefix-scan/include/: Data.h  kernels.clh
radix-sort/: CMakeLists.txt  README.md  RadixSort.cpp
radix-sort/include/: Data.h  kernels.clh
template/: CMakeLists.txt  Main.cpp  README.md
